Updating URL creation